--- a/src/main/resources/styles/IntroStyle.css
+++ b/src/main/resources/styles/IntroStyle.css
@@ -1,41 +1,62 @@
-/*
-  Server primary:   #c38c00
-  Server secondary: #9d7100 >>===============>>
-  Client primary:   #0391FD
-  Client secondary: #0F71D3
+@import "ColorPalette.css";
 
- */
-.backgroundpane {
-    -fx-background-color: linear-gradient(to bottom right, #DAA520, #1173D3);
-    -fx-padding: 25px;
+/*-------------------------------------------------------------*/
+/* Modifications for the titlebar's background */
+.titleBar{
+    -fx-background-color: -dark-primary;
 }
-.button {
-    -fx-pref-width: 100px;
-    -fx-pref-height: 50px;
-    -fx-background-color: orange;
-
-}
+/* Changes for Window's Title */
 .label {
-    -fx-background-color: yellow;
+    -fx-text-fill: white;
 }
-.image-view {
-    
-}
+/* Uniform look for close/minimize buttons */
 .windowButton {
     -fx-font-size: 16px;
     -fx-pref-width: 40px;
     -fx-pref-height: 32px;
     -fx-alignment: center;
+    -fx-text-fill: grey;
 }
-/* .miniButton {
-    -fx-background-color: blue;
-} */
+/*-------------------------------------------------------------*/
+/* Modifications for the intro's main center stage pane */
+.backgroundpane {
+    -fx-background-color: linear-gradient(to bottom right, -server-primary, -client-primary);
+    -fx-padding: 25px;
+}
+/* Change color when we hover over the close or minimize buttons! */
 .miniButton:hover {
     -fx-background-color: rgba(124, 124, 124, 0.219);
+    -fx-text-fill: white;
 }
-/* .closeButton {
-    -fx-background-color: red;
-} */
 .closeButton:hover {
     -fx-background-color: rgb(226, 0, 0);
+    -fx-text-fill: white;
+}
+/*-------------------------------------------------------------*/
+/* Uniform look for server/client buttons */
+.button {
+    -fx-pref-width: 100px;
+    -fx-pref-height: 50px;
+    -fx-text-fill: white;
+    -fx-background-radius: 20px;
+}
+/* Specific colors for each */
+.serverButton {
+    -fx-background-color: -server-primary;
+}
+.clientButton {
+    -fx-background-color: -client-primary;
+}
+/* Change colors on hover */
+.serverButton:hover {
+    -fx-background-color: -dark-primary;
+    -fx-border-color: -server-secondary;
+    -fx-border-radius: 16px;
+    -fx-border-width: 4px;
+}
+.clientButton:hover {
+    -fx-background-color: -dark-primary;
+    -fx-border-color: -client-secondary;
+    -fx-border-radius: 16px;
+    -fx-border-width: 4px;
 }
