--- a/src/main/resources/styles/ColorPalette.css
+++ b/src/main/resources/styles/ColorPalette.css
@@ -7,18 +7,22 @@
     font-family: "NEON CLUB MUSIC";
     src: url("../fonts/NCM.otf");
 }
+@font-face {
+    font-family: "Gasalt";
+    src: url("../fonts/Gasalt-Regular.ttf");
+}
 .root {
     /* Color Palette - Shared across application */
     -server-primary:    rgb(195, 140, 0);
-    -server-secondary:  rgb(157, 113, 0);
+    -server-secondary:  rgb(126, 91, 0);
     -server-highlight:  derive(-server-primary, 55%);
     -server-transluscent:      rgba(194, 139, 0, 0.95);
     -client-primary:    rgb(3, 145, 253);
-    -client-secondary:  rgb(15, 113, 211);
+    -client-secondary:  rgb(0, 81, 162);
     -client-highlight:  derive(-client-primary, 55%);
     -client-transluscent:      rgba(3, 144, 252, 0.95);
     -dark-primary:      rgb(33, 37, 43);
     -dark-secondary:    rgb(26, 30, 35);
     -dark-highlight:    derive(-dark-primary, 45%);
-    -dark-unfocused: derive(-dark-primary, 100%);
+    -dark-unfocused: derive(-dark-primary, 99%);
 }
